<resources>

    <string name="app_name">Chroma</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="title_activity_settings_pane">Settings</string>
    <string name="title_activity_main_pane">Chroma</string>
    <string name="conemonochromancy">Cone Mono Chromancy</string>
    <string name="rodmonochromancy">Rod Monochromancy</string>
    <string name="tritanopia ">Tritanopia </string>
    <string name="deuteranopia">Deuteranopia</string>
    <string name="helpmenutext">this is the help menu</string>
    <string name="menu_about">About</string>
    <string name="textview">textview</string>
</resources>