<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_help"
        android:title="@string/menu_help"
        android:orderInCategory="100">
		</item>
    <item android:id="@+id/menu_settings"
       	 android:title="@string/menu_settings">
       	 <menu>
       	     <group android:checkableBehavior="single">
                <item android:id="@+id/rodmonochromancy"
                    android:title="@string/rodmonochromancy"/>
                <item android:id="@+id/conemonochromancy"
                    android:title="@string/conemonochromancy"/>
                <item android:id="@+id/protanopia"
                    android:title="@string/protanopia"/>
                <item android:id="@+id/deuteranopia"
               		android:title="@string/deuteranopia" />
                </group>
                </menu>
                </item>
   <item android:id="@+id/menu_about"
       android:title="@string/menu_about">
       </item>
</menu>